name:                sdl2examples
version:             0.1.0.0
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable lesson01
  main-is:             lesson01.hs
  build-depends:       base >=4.6 && <4.7,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind


executable lesson02
  main-is:             lesson02.hs
  build-depends:       base >=4.6 && <4.7,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind


executable lesson03
  main-is:             lesson03.hs
  build-depends:       base >=4.6 && <4.7,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind


executable lesson04
  main-is:             lesson04.hs
  build-depends:       base >=4.6 && <4.7,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind


executable lesson05
  main-is:             lesson05.hs
  build-depends:       base >=4.6 && <4.7,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind


executable lesson06
  main-is:             lesson06.hs
  build-depends:       base >=4.6 && <4.7,
                       sdl2,
                       sdl2-image
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind


executable lesson07
  main-is:             lesson07.hs
  build-depends:       base >=4.6 && <4.7,
                       sdl2,
                       sdl2-image
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind


executable lesson08
  main-is:             lesson08.hs
  build-depends:       base >=4.6 && <4.7,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
