name:                sdl2examples
version:             0.1.0.0
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
build-type:          Simple
cabal-version:       >=1.10


executable lesson02
  main-is:             lesson02.hs
  build-depends:       base,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson03
  main-is:             lesson03.hs
  build-depends:       base,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson04
  main-is:             lesson04.hs
  build-depends:       base,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson05
  main-is:             lesson05.hs
  build-depends:       base,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson06
  main-is:             lesson06.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson07
  main-is:             lesson07.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson08
  main-is:             lesson08.hs
  build-depends:       base,
                       sdl2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson09
  main-is:             lesson09.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson10
  main-is:             lesson10.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson11
  main-is:             lesson11.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson12
  main-is:             lesson12.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson13
  main-is:             lesson13.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson14
  main-is:             lesson14.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson15
  main-is:             lesson15.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall


executable lesson17
  main-is:             lesson17.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable lesson19
  main-is:             lesson19.hs
  build-depends:       base,
                       sdl2,
                       sdl2-image,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
