name:                common
version:             0.1.0.0
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
cabal-version:       >=1.10
build-type:          Simple

library
  hs-source-dirs:      lib
  exposed-modules:     Common
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , sdl2
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

