name:                common
version:             0.1.0.0
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
cabal-version:       >=1.10
build-type:          Simple

library
  hs-source-dirs:      lib
  exposed-modules:     Common
  build-depends:       base
                     , sdl2
                     , sdl2-image
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

