name:                lesson01
version:             0.1.0.0
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
cabal-version:       >=1.10
build-type:          Simple

executable lesson01
  hs-source-dirs:      src
  main-is:             Lesson01.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , sdl2
                     , text
  default-language:    Haskell2010
