name:                lesson08
version:             0.1.0.0
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
cabal-version:       >=1.10
build-type:          Simple


executable lesson08
  hs-source-dirs:      src
  main-is:             Lesson08.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , common
                     , extra
                     , mtl
                     , sdl2
                     , transformers
  default-language:    Haskell2010
