name:                lesson10
version:             0.1.0.0
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
cabal-version:       >=1.10
build-type:          Simple


executable lesson10
  hs-source-dirs:      src
  main-is:             Lesson10.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , common
                     , extra
                     , sdl2
  default-language:    Haskell2010
