name:                lesson12
version:             0.1.0.0
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
cabal-version:       >=1.10
build-type:          Simple


executable lesson12
  hs-source-dirs:      src
  main-is:             Lesson12.hs
  other-modules:       Lesson12.Types
                     , Lesson12.Transitions
                     , Lesson12.Rendering
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , common
                     , sdl2
                     , sdl2-image
                     , extra
                     , monad-loops
                     , containers
                     , text
  default-language:    Haskell2010
