name:                lesson13
version:             0.1.0.0
author:              Jack Palfrey
maintainer:          jack.palf@gmail.com
cabal-version:       >=1.10
build-type:          Simple


executable lesson13
  hs-source-dirs:      src
  main-is:             Lesson13.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , common
                     , sdl2
                     , sdl2-image
                     , monad-loops
  default-language:    Haskell2010
